<package>
  <name>map_server</name>
  <version>0.6.0</version>
  <description>
    map_server
  </description>
  <author>maxtom</author>
  <maintainer email="hitmaxtom@gmail.com">maxtom</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>  
  <build_depend>octomap_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>image_transport</build_depend>

 <run_depend>cv_bridge</run_depend>
 <run_depend>image_transport</run_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>visualization_msgs</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>pcl_ros</run_depend>
 <run_depend>pcl_conversions</run_depend>
 <run_depend>nav_msgs</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>std_srvs</run_depend>
 <run_depend>octomap</run_depend>
 <run_depend>octomap_msgs</run_depend>
 <run_depend>octomap_ros</run_depend>
 <run_depend>dynamic_reconfigure</run_depend>
 <run_depend>nodelet</run_depend>
 <run_depend>libpcl-all</run_depend>
 
</package>


